chore: cleanup code